// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifExpertApp /> Debe de mostrar una lista de categorias  1`] = `
<Fragment>
  <h2
    className="gifs-title"
  >
    gif-Expert-App
  </h2>
  <p
    className="gifs-p"
  >
    Busca tu Gif favorito
  </p>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en el componente <GifExpertApp /> Debe de mostrar una lista de categorias  2`] = `
<Fragment>
  <h2
    className="gifs-title"
  >
    gif-Expert-App
  </h2>
  <p
    className="gifs-p"
  >
    Busca tu Gif favorito
  </p>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en el componente <GifExpertApp /> El componente <GifExpertApp /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2
    className="gifs-title"
  >
    gif-Expert-App
  </h2>
  <p
    className="gifs-p"
  >
    Busca tu Gif favorito
  </p>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
